- Correcting visible comment count  - Parsing code properly when previewed

--- a/src/AnujRNair/AnujNairBundle/Resources/public/css/pages/blog.less
+++ b/src/AnujRNair/AnujNairBundle/Resources/public/css/pages/blog.less
@@ -90,6 +90,10 @@
             padding: 8px 12px;
             font-size: @font-size-base - 1;
         }
+        // code blocks
+        pre[class*="language-"] {
+            margin: 1em 0 1.5em;
+        }
         &:before,
         &:after {
             position: absolute;
